# markreview-oss

./: .gitattributes  .gitignore  .prettierignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  EULA.txt  LICENSE  README.md  REFACTORING_ANALYSIS.md  RELEASE_NOTES_0.1.11.md  RELEASE_NOTES_0.1.7.md  RELEASE_NOTES_0.1.8.md  create_icon.py  eslint.config.js  package-lock.json  package.json  test-file.md  test-localStorage.html  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: CLAUDE.md  settings.local.json
.github/scripts/: extract-changelog.cjs
.github/workflows/: ci.yml  release-assets.yml  release.yml
patches/: 0001-style-markdown-preserve-whitespace-in-code-blocks.patch
scripts/: session-status.cjs  verify-no-telemetry.cjs
src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/__tests__/: AppLayout.preview.test.tsx  AppLayout.test.tsx
src/components/: CodeMirrorEditor.css  CodeMirrorEditor.tsx  DragDropOverlay.css  DragDropOverlay.tsx  Editor.css  Editor.tsx  ErrorBoundary.css  ErrorBoundary.tsx  Preview.css  Preview.tsx  SettingsPanel.css  SettingsPanel.tsx  ShortcutEditor.css  ShortcutEditor.tsx  SplitPane.css  SplitPane.tsx  Toast.css  Toast.tsx  Toolbar.css  Toolbar.tsx  VirtualizedPreview.tsx
src/hooks/: useDragAndDrop.ts  useFileOperations.ts  useFileWatcher.ts  useKeyboardShortcuts.ts  useMarkdown.ts  useScrollSync.ts  useSettings.ts  useTauriIntegration.ts  useToast.ts  (+1 more)
(+17 files in other folders)
